[package]
name = "wlrs-wasm"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
wasm-logger = { version = "0.2.0", default-features = false }
web-sys = { version = "0.3.69", default-features = false, features = ["HtmlInputElement"] }
log = { version = "0.4.21", default-features = false }

[build-dependencies]
dotenv = { version = "0.15.0", default-features = false }


[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
lto = true
